# netbox-proxbox

./: ..env.swp  .env-example  .gitignore  .setup.py.swp  404.html  CNAME  CONTRIBUTING.md  FASTAPI.md  MANIFEST.in  Pipfile  README.md  mkdocs.yml  netbox_custom_fields.csv  psaux.txt  pyproject.toml  reinstall.sh  requirements-docs.txt  requirements-new.txt  requirements.txt  settings.py  setup.py  sitemap.xml  tasks.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  pypi.yml  python-package.yml  python-package2.yml
configuration/: index.html
configuration/required-parameters/: index.html
contrib/: proxbox.service
development/: Dockerfile  configuration.py  dev.env  docker-compose.yml
docs/: extra.css  index.md  introduction.md  mkdocs.yml  roadmap.md
docs/_theme/: main.html
docs/backend/: index.md
docs/configuration/: index.md  required-parameters.md
docs/features/: api-integration.md  backup.md  monitoring.md  network.md  synchronized-data.md  virtual-machine.md  vlan-management.md
docs/installation/: upgrading.md
docs/models/: containers.md  others.md  (+1 more)
installation/: index.html
introduction/: index.html
netbox_proxbox/: __init__.py  admin.py  create.py  deploy_uvicorn.py  example.py  filters.py  forms.py  github.py  icon_classes.py  logging.py  main.py  models.py  navigation.py  release.py  settings.py  tables.py  template_content.py  updates.py  urls.py  views.py
release-notes/: index.html
roadmap/: index.html
search/: search_index.json
standalone/: package-lock.json  package.json  tsconfig.json
tests/: class-test.py
(+190 files in other folders)
