[tool.poetry]
name = "netbox-proxbox"
version = "v0.0.5"
description = "Netbox Plugin - Integrate Proxmox and Netbox"
readme = "README.md"
authors = ["Emerson Felipe <emerson.felipe@nmultifibra.com>"]
license = "Apache-2.0"
packages = [
    { include = "netbox_proxbox" }
]

[tool.poetry.dependencies]
python = "^3.8"
pynetbox = "^7.0.1"
proxmoxer = "^2.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
invoke = "^1.5.0"
pylint = "^2.7.4"
pylint-django = "^2.4.3"
pydocstyle = "^6.0.0"
yamllint = "^1.26.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "requests",
    "pynetbox",
    "proxmoxer"
]
build-backend = "poetry.core.masonry.api"
